# xtgen

./: .gitignore  Makefile  README.md  TODO.md  basic.pd  counter-help.pd  counter-test.pd  counter.c  counter.pd_darwin  counter.yml  external.yml  model.py  mypy.ini  pd.py  py2pd.py  pyproject.toml  refactored.py  test_xtgen.c  xtgen.h  xtgen.py
docs/research/: pd-file-format.md
docs/research/pd-externals/: Chris McCormick's website - index of -projects-PyPd.webloc  HOWTO write an External for puredata.webloc  Pd Documentation 4.webloc  Pd and externals.webloc  interstar-Gates-Of-Dawn- Python library for creating PureData patches..webloc  pure-data-externals-howto- How-To write externals for Pd.webloc
lib/: README.md  bang.pd  basic.pd  float.pd  nested.pd  objects.yml  py2pd.py
research/: pd-file-format.md  pd-file.md  scale.md
research/codegen/: linuxias-ccodegen- A module that creates a C-based source file and a header file..webloc  shakfu-cfile- A python C code generator.webloc
research/compilers/: Nuitka Home.webloc  lib.py  serge-sans-paille-pythran- Ahead of Time compiler for numeric kernels.webloc
research/dsls/: textX-textX- Domain-Specific Languages and parsers in Python made easy http--textx.github.io-textX.webloc
research/pd-externals/: JanCVanB-pyata- a Library that allows you to use Pure Data inside Python! (recovered from Google Cod….webloc  automata-topd- A simple Python interface to PureData.webloc  dfkettle-Pd-Analyzer- Pd-Analyzer is a command-line utility that reads a Pure Data file (a "patch") ….webloc  puredata-compiler · PyPI.webloc  vug-puredata-python- An attempt to make a Python extension with an object that can generate messages….webloc
research/transpilers/: adsharma-py2many- Python to CLike languages transpiler.webloc  jikka-v5.6.0.0-macOS  kmyk-Jikka- an automated solver for problems of competitive programming.webloc  lukasmartinelli-py14- Python to C++ 14 transpiler.webloc  mbdevpl-transpyle- HPC-oriented transpiler for C, C++, Cython, Fortran, OpenCL and Python..webloc  pradyun-Py2C- Py2C — a Python to C++ converter.webloc  shedskin-shedskin- Shed Skin is a Python to C++ compiler. Read the introduction below to learn about….webloc
resources/headers/: test_xtgen_mx.c  test_xtgen_pd.c  xtgen_common.h  xtgen_pd.h
src/xtgen/: __init__.py  cli.py  core.py  generators.py  models.py  templates.py
templates/: Makefile.mako  README.md.mako  template.c.mako
templates/mx/: README.md.mako  dsp-external.cpp.mako  external.cpp.mako
templates/pd/: Makefile.mako
tests/: counter.orig.c  demo-test.pd  external.yml  test_xtgen.py
tests/attrs/: demo.py  dsp_osc~.cpp  ext.mako  osc~.yml  template.mako
tests/patchgen/: toggle.pd
tests/pd/: utils.c
tests/pd/counter1/: counter-test.pd  counter.c
tests/pd/counter2/: counter.yml
(+7 files in other folders)
