[project]
name = "xtgen"
version = "0.1.0"
description = "A tool to generate skeleton puredata and Max/MSP external files."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mako>=1.3.10",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.1",
    "types-pyyaml>=6.0.12.20250915",
]
