[project]
name = "xtgen"
version = "0.1.2"
description = "A modern, type-safe tool to generate skeleton PureData and Max/MSP external files"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "xtgen contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "mako>=1.3.10",
    "pyyaml>=6.0.2",
]


[project.scripts]
xtgen = "xtgen.core:main"


[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "types-pyyaml>=6.0.12.20250915",
]


[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
